cabal-version:      3.12

-- Newer versions complain
name:               monopoly
version:            0.2.0.0
homepage:           https://github.com/danwdart/projects#readme
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         cabal@dandart.co.uk
copyright:          2019 Dan Dart
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  hs-source-dirs:     lib

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:
    , base         ^>=4.21.0.0
    , containers   ^>=0.8
    , lens         ^>=5.3.3
    , MonadRandom  ^>=0.6.1

  exposed-modules:
    Game.Monopoly.Addons
    Game.Monopoly.Board
    Game.Monopoly.Board.Devon
    Game.Monopoly.Board.London
    Game.Monopoly.Colour
    Game.Monopoly.Dice
    Game.Monopoly.Game
    Game.Monopoly.Helpers
    Game.Monopoly.Player
    Game.Monopoly.Property
    Game.Monopoly.Random
    Game.Monopoly.Rules
    Game.Monopoly.Space
    Game.Monopoly.Station
    Game.Monopoly.Tax
    Game.Monopoly.Token
    Game.Monopoly.Utility

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures

common shared-properties
  hs-source-dirs:     src

  if arch(javascript)
    js-sources: jsbits/emcc-config.js

  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      base ^>=4.21.0.0

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -haddock -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-missing-local-signatures

  ghcjs-options:      -dedupe

executable monopoly
  import:        shared-properties
  main-is:       Main.hs
  build-depends:
    , base        ^>=4.21.0.0
    , containers  ^>=0.8
    , monopoly    ^>=0.2.0.0

-- , lens                 ^>=5.3.3
-- , MonadRandom ^>=0.6.1
-- , random ^>=1.3.0

test-suite monopoly-test
  -- import:             shared-properties
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
  default-language:   GHC2024
  default-extensions: UnicodeSyntax
  build-depends:      hspec ^>=2.11.10

  -- , base        ^>=4.21.0.0
  -- , monopoly ^>=0.2.0.0
  -- , QuickCheck ^>=2.16.0.0
  -- , hspec-core ^>=2.11.10
  -- , hspec-expectations ^>=0.8.4
  build-tool-depends: hspec-discover:hspec-discover
