name:                other
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danwdart/dansstuff#readme
license:             PublicDomain
-- license-file:        LICENSE
author:              Dan Dart
maintainer:          cabal@dandart.co.uk
copyright:           2019 Dan Dart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable euler1
  hs-source-dirs:      src
  main-is:             euler/1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable euler2
  hs-source-dirs:      src
  main-is:             euler/2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable euler3
  hs-source-dirs:      src
  main-is:             euler/3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, primes

executable euler4
  hs-source-dirs:      src
  main-is:             euler/4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable base
  hs-source-dirs:      src
  main-is:             maths/base.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, digits

executable cardord
  hs-source-dirs:      src
  main-is:             maths/cardord.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable onetwenty
  hs-source-dirs:      src
  main-is:             maths/120.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable factory
  hs-source-dirs:      src
  main-is:             maths/factory.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, factory

executable frobenius
  hs-source-dirs:      src
  main-is:             maths/frobenius.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable kaprekar
  hs-source-dirs:      src
  main-is:             maths/kaprekar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable more
  hs-source-dirs:      src
  main-is:             maths/more.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, egyptian-fractions, numbers, FixedPoint-simple

executable mtdivergence
  hs-source-dirs:      src
  main-is:             maths/mtdivergence.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable numbertypes
  hs-source-dirs:      src
  main-is:             maths/numbertypes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable oeis
  hs-source-dirs:      src
  main-is:             maths/oeis.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , containers
                      , GenericPretty
                      , http-client
                      , req
                      , text
                      , unordered-containers
                      , vector

executable prodtosingle
  hs-source-dirs:      src
  main-is:             maths/prodtosingle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable surds
  hs-source-dirs:      src
  main-is:             maths/surds.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5


executable decomp
  hs-source-dirs:      src
  main-is:             maths/primefun/decomp.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, primes

executable primefun
  hs-source-dirs:      src
  main-is:             maths/primefun/primefun.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, primes

executable primey
  hs-source-dirs:      src
  main-is:             maths/primefun/primey.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, primes

executable intro
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable algsys
  hs-source-dirs:      src
  main-is:             algebra-systems.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable alltypes
  hs-source-dirs:      src
  main-is:             alltypes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable applicativedo
  hs-source-dirs:      src
  main-is:             applicativedo.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable async
  hs-source-dirs:      src
  main-is:             async.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, async

executable bar
  hs-source-dirs:      src
  main-is:             bar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lib.SafeDiv

executable bashy
  hs-source-dirs:      src
  main-is:             bashy.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory

executable basic
  hs-source-dirs:      src
  main-is:             basic.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable baz
  hs-source-dirs:      src
  main-is:             baz.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable betterbools
  hs-source-dirs:      src
  main-is:             betterbools.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable bifunctor
  hs-source-dirs:      src
  main-is:             bifunctor.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable binarygame
  hs-source-dirs:      src
  main-is:             binarygame.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ansi-terminal

--executable bluetooth
--  hs-source-dirs:      src
--  main-is:             bluetooth.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5, simple-bluetooth

executable breakeverything
  hs-source-dirs:      src
  main-is:             breakeverything.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable callcc
  hs-source-dirs:      src
  main-is:             callcc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable chain
  hs-source-dirs:      src
  main-is:             chain.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable cipher
  hs-source-dirs:      src
  main-is:             cipher.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable class
  hs-source-dirs:      src
  main-is:             class.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable cli_contt
  hs-source-dirs:      src
  main-is:             cli_contt.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable cli
  hs-source-dirs:      src
  main-is:             cli.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable complex
  hs-source-dirs:      src
  main-is:             complex.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable composition
  hs-source-dirs:      src
  main-is:             composition.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, template-haskell

executable composition-eta
  hs-source-dirs:      src
  main-is:             composition-eta.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable cont
  hs-source-dirs:      src
  main-is:             cont.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable cyclesinmixedset
  hs-source-dirs:      src
  main-is:             cyclesinmixedset.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable data
  hs-source-dirs:      src
  main-is:             data.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lib.Credential, Lib.Person

executable data2
  hs-source-dirs:      src
  main-is:             data2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable datatypes
  hs-source-dirs:      src
  main-is:             datatypes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable delay
  hs-source-dirs:      src
  main-is:             delay.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, ansi-terminal, random

executable disparate
  hs-source-dirs:      src
  main-is:             disparate.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable do
  hs-source-dirs:      src
  main-is:             do.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable dokis
  hs-source-dirs:      src
  main-is:             dokis.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable dorar
  hs-source-dirs:      src
  main-is:             dorar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable echo
  hs-source-dirs:      src
  main-is:             echo.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable elf
  hs-source-dirs:      src
  main-is:             elf.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, elf, bytestring

executable enum
  hs-source-dirs:      src
  main-is:             enum.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable eventloop
  hs-source-dirs:      src
  main-is:             eventLoop.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, async, concurrent-extra, lifted-async

executable exception-safety
  hs-source-dirs:      src
  main-is:             exception-safety.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable fake
  hs-source-dirs:      src
  main-is:             fake.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, fakedata, text

executable ffi
  hs-source-dirs:      src
  main-is:             ffi.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable files
  hs-source-dirs:      src
  main-is:             files.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, directory

executable fix
  hs-source-dirs:      src
  main-is:             fix.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable flow
  hs-source-dirs:      src
  main-is:             flow.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, flow

executable foo
  hs-source-dirs:      src
  main-is:             foo.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable generics
  hs-source-dirs:      src
  main-is:             generics.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable gifencode
  hs-source-dirs:      src
  main-is:             gifencode.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gd
  other-modules:       Lib.Seq

executable graft
  hs-source-dirs:      src
  main-is:             graft.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable hashparker
  hs-source-dirs:      src
  main-is:             hashparker.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable haxl
  hs-source-dirs:      src
  main-is:             haxl.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, haxl

executable heact
  hs-source-dirs:      src
  main-is:             heact.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable hsx
  hs-source-dirs:      src
  main-is:             hsx.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hsp, hsx2hs, template-haskell, text

executable interact
  hs-source-dirs:      src
  main-is:             interact.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable ioref
  hs-source-dirs:      src
  main-is:             ioref.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable json
  hs-source-dirs:      src
  main-is:             json.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, bytestring, mtl

executable lc
  hs-source-dirs:      src
  main-is:             lc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable lenses
  hs-source-dirs:      src
  main-is:             lenses.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens

executable mdns
  hs-source-dirs:      src
  main-is:             mdns.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, avahi

executable moonmadness
  hs-source-dirs:      src
  main-is:             moonmadness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable monad
  hs-source-dirs:      src
  main-is:             monad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable mvar
  hs-source-dirs:      src
  main-is:             mvar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, async

executable napier-locar
  hs-source-dirs:      src
  main-is:             napier-locar.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, digits

executable noecho
  hs-source-dirs:      src
  main-is:             noecho.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable optics
  hs-source-dirs:      src
  main-is:             optics.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, optics

executable pipeline
  hs-source-dirs:      src
  main-is:             pipeline.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable pizza
  hs-source-dirs:      src
  main-is:             pizza.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , containers
                      , GenericPretty
                      , http-client
                      , req
                      , text
                      , unordered-containers
                      , vector

executable ports
  hs-source-dirs:      src
  main-is:             ports.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  
executable qchas
  hs-source-dirs:      src
  main-is:             qchas.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, qchas
  
executable random
  hs-source-dirs:      src
  main-is:             random.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
  
executable reader
  hs-source-dirs:      src
  main-is:             reader.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable regex
  hs-source-dirs:      src
  main-is:             regex.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, regex-tdfa

executable req
  hs-source-dirs:      src
  main-is:             req.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, bytestring, mtl, req, retry, text

executable scrapetumblr
  hs-source-dirs:      src
  main-is:             scrapetumblr.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable sequence
  hs-source-dirs:      src
  main-is:             sequence.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lib.Seq

executable sequences
  hs-source-dirs:      src
  main-is:             sequences.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable shell
  hs-source-dirs:      src
  main-is:             shell.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, shell-conduit

--executable sockets
--  hs-source-dirs:      src
--  main-is:             sockets.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5, async, bytestring, network

executable sound
  hs-source-dirs:      src
  main-is:             sound.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable sql
  hs-source-dirs:      src
  main-is:             sql.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HDBC, HDBC-sqlite3, HDBC-mysql, HDBC-postgresql, text, mtl

executable st
  hs-source-dirs:      src
  main-is:             st.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable state
  hs-source-dirs:      src
  main-is:             state.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable stm
  hs-source-dirs:      src
  main-is:             stm.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, stm

executable tardis
  hs-source-dirs:      src
  main-is:             tardis.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tardis

executable terrain
  hs-source-dirs:      src
  main-is:             terrain.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random

executable texttodec
  hs-source-dirs:      src
  main-is:             textToDec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable texttodeccrazy
  hs-source-dirs:      src
  main-is:             textToDecCrazy.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable threedeegee
  hs-source-dirs:      src
  main-is:             3dg.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, threepenny-gui

executable trace
  hs-source-dirs:      src
  main-is:             trace.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl, transformers

executable transformers
  hs-source-dirs:      src
  main-is:             transformers.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, transformers

executable translatorglitch
  hs-source-dirs:      src
  main-is:             translatorglitch.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , aeson
                      , bytestring
                      , gogol
                      , gogol-core
                      , gogol-translate
                      , lens
                      , req
                      , text
                      , unordered-containers

executable trip
  hs-source-dirs:      src
  main-is:             trip.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable typeable
  hs-source-dirs:      src
  main-is:             typeable.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable types
  hs-source-dirs:      src
  main-is:             types.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lib.Auth
                      , Lib.Data.Email
                      , Lib.Data.Name
                      , Lib.Data.Password
                      , Lib.Data.User

executable unicode
  hs-source-dirs:      src
  main-is:             unicode.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable wai
  hs-source-dirs:      src
  main-is:             wai.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, http-types, wai, warp

executable whereinlet
  hs-source-dirs:      src
  main-is:             whereinlet.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable writer
  hs-source-dirs:      src
  main-is:             writer.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, mtl

executable xpath
  hs-source-dirs:      src
  main-is:             xpath.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hxt, hxt-xpath, safe-foldable, text
  other-modules:       Lib.XPath

executable yaml
  hs-source-dirs:      src
  main-is:             yaml.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, yaml, bytestring